--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,13 +1,16 @@
 main:
+  - name: "Home"
+    url: "/"
+    weight: 2
   - name: "Projects"
     url: "/projects/"
-    weight: 2
+    weight: 3
   - name: "About"
     url: "/about/"
-    weight: 3
+    weight: 4
   - name: "Contact"
     url: "/contact/"
-    weight: 4
+    weight: 5
 
 footer:
   - name: "Home"
