--- a/_config.yml
+++ b/_config.yml
@@ -11,17 +11,14 @@ logo:
   desktop: "images/logo/logo.svg"
   desktop_height: "36px"
 footer:
-  copyright_text: 'Checkout my GitHub for detailed code <a class="zerostatic" href="https://github.com/ThomasKimble">www.github.com/ThomasKimble</a>'
+  copyright_text: 'Checkout my GitHub for detailed code <a class="thomaskimble" href="https://github.com/ThomasKimble">www.github.com/ThomasKimble</a>'
 
 seo:
-  meta_og_title: "Jekyll Serif Theme"
+  meta_og_title: "Thomas Kimble"
   meta_og_type: "website"
-  meta_og_url: "https://jekyll-serif-theme.netlify.app"
+  meta_og_url: "https://thomaskimble.github.io/"
   meta_og_image: "https://raw.githubusercontent.com/zerostaticthemes/jekyll-serif-theme/master/screenshots/tn.png"
-  meta_og_description: "Jekyll Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
-  meta_twitter_card: "summary"
-  meta_twitter_site: "@zerostaticio"
-  meta_twitter_creator: "@zerostaticio"
+  meta_og_description: "Thomas Kimble | Project Page"
 
 collections:
   projects:
