--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ homepage:
 logo:
   mobile: "images/logo/logo-mobile.svg"
   desktop: "images/logo/logo.svg"
+  mobile-dark: "images/logo/logo-mobile-dark.svg"
+  desktop-dark: "images/logo/logo-dark.svg"
   desktop_height: "36px"
 footer:
   copyright_text: '© THOMAS KIMBLE 2021'
